k8s/base/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: ans-client-demo
spec:
  selector:
    app: ans-client-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
